# pyarith

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
pyarith/: __init__.py  exceptions.py  operations.py  py.typed
tests/: test_operations.py
