[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyarith"
version = "0.1.0"
description = "A clean, dependency-free arithmetic utility library for Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Akash S" }]
keywords = ["arithmetic", "math", "calculator", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/akashs/pyarith"
"Bug Tracker" = "https://github.com/akashs/pyarith/issues"
Changelog = "https://github.com/akashs/pyarith/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyarith*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pyarith"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
